[package]
name = "gpx-tui"
description = "Map GPX track data in your terminal"
version = "0.1.0"
authors = ["Daniel Lockyer <hi@daniellockyer.com>"]
repository = "https://github.com/daniellockyer/gpx-tui"
homepage = "https://github.com/daniellockyer/gpx-tui"
readme = "README.md"
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpx = "0.7"
tui = "0.8"
termion = "1.5"

[dependencies.clap]
version = "~2.33"
default-features = false
